<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:padding="@dimen/main_border">
    <TextView style="@style/HeadingOne" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/add_alarm_title" android:id="@+id/add_alarm_title"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/add_alarm_desc" style="@style/Paragraph" android:id="@+id/add_alarm_help"></TextView>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1">
        <EditText android:layout_weight="1" android:hint="Destination" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/txt_destination"></EditText>
        <Button android:id="@+id/btn_add_alarm" android:layout_height="wrap_content" android:text="Add" android:layout_width="wrap_content"></Button>
    </LinearLayout>
    <TextView style="@style/HeadingOne" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/current_alarms_title" android:id="@+id/your_alarm_title"></TextView>
    <TextView style="@style/Paragraph" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/current_alarms_desc" android:id="@+id/your_alarm_help"></TextView>
    <ListView android:layout_height="wrap_content" android:id="@+id/listView1" android:layout_width="fill_parent"></ListView>
</LinearLayout>
